--- a/config.yaml
+++ b/config.yaml
@@ -5,5 +5,6 @@ IBM_TONE_ANALYZER:
   password: tlr7gPBoPswb
 
 IBM_NLU:
+  version: 2018-11-24
   apikey: ESd3hYlpHotDM0IRlFLkEe5odCiXzEYss6OiN9DGsWZu
   url: https://gateway-fra.watsonplatform.net/natural-language-understanding/api
